[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cfr"
version = "2026.4.16"
description = "cfr: a Python package for Climate Field Reconstruction"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
authors = [
    {name = "Feng Zhu", email = "fengzhu@ucar.edu"},
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "colorama",
    "seaborn",
    "pandas",
    "tqdm",
    "xarray",
    "netCDF4",
    "nc-time-axis",
    "dask",
    "statsmodels",
    "eofs",
    "plotly",
    "pyresample",
]

[project.optional-dependencies]
psm = ["pathos", "fbm"]
graphem = ["cython", "scikit-learn", "cfr-graphem"]

[tool.setuptools.packages.find]
include = ["cfr*"]

[project.urls]
Homepage = "https://github.com/fzhu2e/cfr"
Documentation = "https://fzhu2e.github.io/cfr"
